--- a/index.html
+++ b/index.html
@@ -3,67 +3,114 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>계남고등학교 제 32대 학생회 지원자 합격조회</title>
+  <title>계남고등학교 제32대 학생회 합격자 조회</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
-      font-family: 'Malgun Gothic', sans-serif;
-      background: #f5f6f8;
+      margin: 0;
+      font-family: 'Noto Sans KR', sans-serif;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      color: #222;
     }
-    .container {
-      background: white;
-      padding: 40px;
-      width: 420px;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+    .card {
+      background: #ffffff;
+      width: 460px;
+      padding: 48px 40px;
+      border-radius: 18px;
+      box-shadow: 0 25px 60px rgba(0,0,0,0.25);
       text-align: center;
+      animation: fadeIn 0.8s ease;
     }
     h1 {
-      font-size: 20px;
-      margin-bottom: 30px;
+      font-size: 22px;
+      font-weight: 700;
+      line-height: 1.4;
+      margin-bottom: 12px;
+    }
+    .subtitle {
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 36px;
     }
     input {
       width: 100%;
-      padding: 12px;
+      padding: 14px;
       font-size: 18px;
       text-align: center;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      outline: none;
       margin-bottom: 20px;
+    }
+    input:focus {
+      border-color: #2c5364;
     }
     button {
       width: 100%;
-      padding: 12px;
+      padding: 14px;
       font-size: 16px;
-      background: #1f4fff;
+      font-weight: 500;
+      background: #2c5364;
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
+      transition: background 0.3s;
     }
     button:hover {
-      background: #163ad6;
+      background: #203a43;
     }
     .result {
-      margin-top: 30px;
-      font-size: 18px;
-      font-weight: bold;
+      margin-top: 32px;
+      font-size: 20px;
+      font-weight: 700;
+      min-height: 28px;
     }
-    .pass { color: #1f8b2f; }
-    .fail { color: #c62828; }
-    .invalid { color: #555; }
+    .pass {
+      color: #1b8f3a;
+    }
+    .fail {
+      color: #c62828;
+    }
+    .invalid {
+      color: #555;
+      font-size: 17px;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .footer {
+      margin-top: 40px;
+      font-size: 12px;
+      color: #aaa;
+    }
   </style>
 </head>
+
 <body>
+  <div class="card">
+    <h1>계남고등학교 제32대 학생회<br>지원자 합격조회</h1>
+    <div class="subtitle">Gyenam High School Student Council</div>
 
-  <div class="container">
-    <h1>계남고등학교 제 32대 학생회<br>지원자 합격조회창</h1>
-
-    <input type="text" id="studentId" placeholder="학번 (5자리) 입력">
+    <input type="text" id="studentId" placeholder="학번 5자리 입력">
     <button onclick="checkResult()">조회</button>
 
     <div id="result" class="result"></div>
+
+    <div class="footer">
+      본 결과는 학생회 선발을 위한 참고용 조회입니다.
+    </div>
   </div>
 
   <script>
@@ -82,7 +129,7 @@
 
       if (input === PASS_ID) {
         resultBox.className = "result pass";
-        resultBox.innerText = "🎉 합격하셨습니다!";
+        resultBox.innerText = "🎉 합격을 진심으로 축하드립니다.";
       } else if (input === FAIL_ID) {
         resultBox.className = "result fail";
         resultBox.innerText = "아쉽게도 불합격하셨습니다.";
@@ -92,6 +139,5 @@
       }
     }
   </script>
-
 </body>
 </html>
