--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 
   <script>
     const PASS_ID = "10714";
+    const PASS_ID = "59734";
     const FAIL_ID = "10715";
 
     function checkResult() {
