--- a/result.html
+++ b/result.html
@@ -43,33 +43,56 @@ td:first-child{color:#555;width:35%}
 }
 @keyframes flow{to{background-position:200% center}}
 
+/* ---- Animated Glass Button ---- */
 .glass-btn{
+ position:relative;
+ overflow:hidden;
  margin-top:26px;width:100%;padding:16px;font-size:16px;font-weight:600;color:white;
  border-radius:14px;border:none;cursor:pointer;
- background:
-  linear-gradient(135deg,rgba(255,255,255,.4),rgba(255,255,255,0)),
-  linear-gradient(135deg,#3b6cff,#1b3fff);
+ background:linear-gradient(120deg,#3b6cff,#6fb7ff,#3b6cff);
+ background-size:200% 200%;
+ animation:glowMove 4s ease infinite;
  box-shadow:0 12px 30px rgba(59,108,255,.45);
  transition:.4s
 }
+.glass-btn::before{
+ content:"";
+ position:absolute; inset:0;
+ background:linear-gradient(60deg,
+   rgba(255,255,255,0) 30%,
+   rgba(255,255,255,.35) 50%,
+   rgba(255,255,255,0) 70%);
+ animation:shine 5s linear infinite;
+}
 .glass-btn:hover{
- background:
-  linear-gradient(315deg,rgba(255,255,255,.5),rgba(255,255,255,0)),
-  linear-gradient(315deg,#4c7dff,#274bff);
- transform:translateY(-2px)
+ transform:translateY(-2px) scale(1.02);
+ animation-duration:1.5s;
 }
 .secondary{margin-top:12px}
 
-/* -------- Print Certificate -------- */
+@keyframes glowMove{
+ 0%{background-position:0% 50%}
+ 50%{background-position:100% 50%}
+ 100%{background-position:0% 50%}
+}
+@keyframes shine{
+ from{transform:translateX(-100%)}
+ to{transform:translateX(100%)}
+}
+
+/* -------- Print Certificate ONLY -------- */
+@page{
+ size:A4;
+ margin:20mm;
+}
 @media print{
  body{background:white}
- .glass-btn{display:none}
+ .header, #table, .glass-btn{display:none !important}
  .panel{
   box-shadow:none;
   width:100%;
-  padding:50px;
+  padding:0;
  }
- .header h1{display:none}
  .print-title{
   display:block;
   text-align:center;
@@ -82,6 +105,7 @@ td:first-child{color:#555;width:35%}
   position:relative;
   border:2px solid #165F9C;
   padding:50px;
+  page-break-inside:avoid;
  }
  .stamp{
   position:absolute;
@@ -154,7 +178,6 @@ const name=p.get("name");
 const t=document.getElementById("table");
 const certTable=document.getElementById("certTable");
 const printBtn=document.getElementById("printBtn");
-const certBox=document.getElementById("cert");
 
 if(!DATA[sid]||DATA[sid].birth!==birth||DATA[sid].name!==name){
  alert("지원자가 아니거나, 입력정보가 잘못되었습니다.");
@@ -172,7 +195,6 @@ if(!DATA[sid]||DATA[sid].birth!==birth||DATA[sid].name!==name){
   html+=row("모집단위",d.unit);
   html+=row("직위",d.pos);
   html+=row("결과",'<span class="result-pass">합격</span>');
-  certBox.style.display="block";
  }else{
   html+=row("결과",'<span class="result-fail">불합격</span>');
   printBtn.style.display="none";
@@ -180,7 +202,7 @@ if(!DATA[sid]||DATA[sid].birth!==birth||DATA[sid].name!==name){
 
  t.innerHTML=html;
 
- // certificate table
+ // certificate table (print only)
  let chtml="";
  chtml+=row("성명",d.name);
  chtml+=row("학번",sid);
