--- a/result.html
+++ b/result.html
@@ -14,14 +14,35 @@ body{
 }
 .panel{
  width:560px;background:linear-gradient(180deg,#fff,#f3f6fb);
- border-radius:24px;padding:48px 44px;
+ border-radius:24px;padding:44px 40px 42px;
  box-shadow:0 40px 80px rgba(0,0,0,.35);
  position:relative;
 }
-.header{text-align:center;margin-bottom:24px}
+.header{text-align:center;margin-bottom:14px}
 .logo{width:80px}
 h1{font-size:22px;margin:10px 0 0}
-table{width:100%;border-collapse:collapse;margin-top:18px}
+
+.congrats-wrap{text-align:center;margin:10px 0 18px}
+.congrats-main{
+ font-size:34px;font-weight:800;
+ background:linear-gradient(90deg,#3b6cff,#6fb7ff,#3b6cff);
+ background-size:200% auto;
+ color:transparent;
+ -webkit-background-clip:text;
+ animation:flow 2s linear infinite;
+}
+.congrats-sub{
+ margin-top:6px;font-size:18px;font-weight:600;color:#1f2d4d;line-height:1.4
+}
+
+.video-box{
+ width:100%;margin:16px 0 10px;
+ border-radius:14px;overflow:hidden;
+ box-shadow:0 12px 30px rgba(0,0,0,.25)
+}
+.video-box video{width:100%;display:block}
+
+table{width:100%;border-collapse:collapse;margin-top:14px}
 td{padding:12px 8px;border-bottom:1px solid #e0e4ef}
 td:first-child{color:#555;width:35%}
 
@@ -43,45 +64,44 @@ td:first-child{color:#555;width:35%}
 }
 @keyframes flow{to{background-position:200% center}}
 
-/* Glass Button */
+/* Buttons */
+.btn-row{
+ display:flex;gap:12px;margin-top:22px
+}
 .glass-btn{
  position:relative;overflow:hidden;
- margin-top:26px;width:100%;padding:16px;font-size:16px;font-weight:600;color:white;
+ padding:15px 0;font-size:15px;font-weight:700;color:white;
  border-radius:14px;border:none;cursor:pointer;
  background:linear-gradient(120deg,#3b6cff,#6fb7ff,#3b6cff);
  background-size:200% 200%;
  animation:glowMove 4s ease infinite;
  box-shadow:0 12px 30px rgba(59,108,255,.45);
- transition:.4s
+ transition:.35s;flex:1
 }
+.full{width:100%}
 .glass-btn::before{
  content:"";position:absolute; inset:0;
  background:linear-gradient(60deg,rgba(255,255,255,0) 30%,rgba(255,255,255,.35) 50%,rgba(255,255,255,0) 70%);
  animation:shine 5s linear infinite;
 }
 .glass-btn:hover{transform:translateY(-2px) scale(1.02);animation-duration:1.5s}
-.secondary{margin-top:12px}
 @keyframes glowMove{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
 @keyframes shine{from{transform:translateX(-100%)}to{transform:translateX(100%)}}
 
 /* hide cert on screen */
-.cert, .print-title{display:none}
+.cert{display:none}
 
 /* ===== PRINT LAYOUT ===== */
 @page{size:A4;margin:18mm}
 @media print{
  body{background:white}
- .header, #table, .glass-btn{display:none !important}
+ .header,.congrats-wrap,.video-box,#table,.btn-row{display:none !important}
  .panel{box-shadow:none;width:100%;padding:0}
-
- .print-title{display:block;text-align:center;margin-bottom:10px}
- .print-logo{width:90px;display:block;margin:0 auto 10px}
 
  .cert{
   display:block !important;
   border:1.5px solid #165F9C;
   padding:35px 40px 50px;
-  position:relative;
  }
 
  .cert h2{text-align:center;font-size:26px;margin:10px 0 25px}
@@ -104,7 +124,8 @@ td:first-child{color:#555;width:35%}
 
  .sign-text{text-align:right;font-size:17px;line-height:1.6}
 
- .stamp{width:140px;opacity:.8}
+ .stamp{width:140px;opacity:.85}
+ .print-logo{width:90px;display:block;margin:0 auto 10px}
 }
 </style>
 </head>
@@ -115,10 +136,21 @@ td:first-child{color:#555;width:35%}
   <h1>계남고등학교 제32대 학생회<br>합격자 조회 결과</h1>
  </div>
 
+ <div class="congrats-wrap" id="congratsWrap" style="display:none">
+   <div class="congrats-main">축하합니다.</div>
+   <div class="congrats-sub">
+     계남고등학교 제32대 학생회에<br>
+     최종 합격하셨습니다.
+   </div>
+ </div>
+
+ <div class="video-box" id="videoBox" style="display:none">
+   <video id="congratsVideo" src="congrats.mp4" autoplay loop muted playsinline></video>
+ </div>
+
  <table id="table"></table>
 
- <button class="glass-btn" id="printBtn" onclick="window.print()">합격통지서 인쇄</button>
- <button class="glass-btn secondary" onclick="location.href='index.html'">다시 조회하기</button>
+ <div class="btn-row" id="btnRow"></div>
 
  <!-- ===== PRINT CERTIFICATE ===== -->
  <div class="cert" id="cert">
@@ -156,7 +188,8 @@ const birth=p.get("birth");
 const name=p.get("name");
 const t=document.getElementById("table");
 const certTable=document.getElementById("certTable");
-const printBtn=document.getElementById("printBtn");
+const btnRow=document.getElementById("btnRow");
+const video=document.getElementById("congratsVideo");
 
 if(!DATA[sid]||DATA[sid].birth!==birth||DATA[sid].name!==name){
  alert("지원자가 아니거나, 입력정보가 잘못되었습니다.");
@@ -171,12 +204,32 @@ if(!DATA[sid]||DATA[sid].birth!==birth||DATA[sid].name!==name){
  html+=row("지원분야",d.track);
 
  if(d.result==="pass"){
+  document.getElementById("congratsWrap").style.display="block";
+  document.getElementById("videoBox").style.display="block";
+
   html+=row("모집단위",d.unit);
   html+=row("직위",d.pos);
   html+=row("결과",'<span class="result-pass">합격</span>');
+
+  btnRow.innerHTML = `
+    <button class="glass-btn" onclick="window.print()">합격통지서 인쇄</button>
+    <button class="glass-btn" onclick="location.href='index.html'">다시 조회하기</button>
+  `;
+
+  // enable sound on first interaction
+  document.body.addEventListener("click",()=>{
+    if(video.muted){
+      video.muted=false;
+      video.play();
+    }
+  },{once:true});
+
  }else{
   html+=row("결과",'<span class="result-fail">불합격</span>');
-  printBtn.style.display="none";
+
+  btnRow.innerHTML = `
+    <button class="glass-btn full" onclick="location.href='index.html'">다시 조회하기</button>
+  `;
  }
 
  t.innerHTML=html;
