--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@ input:focus{border-color:#3b6cff}
 
  <div class="field">
   <label>학번 (5자리)</label>
-  <input id="sid" maxlength="5" placeholder="예: 10714">
+  <input id="sid" maxlength="5">
  </div>
 
  <div class="field">
   <label>생년월일 (6자리, YYMMDD)</label>
-  <input id="birth" maxlength="6" placeholder="예: 090320">
+  <input id="birth" maxlength="6">
  </div>
 
  <button class="glass-btn" onclick="go()">조회하기</button>
